support for custom content files - used for RetroArch game-specific options and remappings

--- a/appsettings.json
+++ b/appsettings.json
@@ -240,16 +240,6 @@
           "Required": true
         }
       ],
-      "InternalEmulator": {
-        "CoreFileName": "A800.so",
-        "AutoLaunch": true,
-        "Files": [
-          {
-            "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
-            "TargetPath": "A800.so"
-          }
-        ]
-      },
       "RetroArchCores": [
         {
           "DisplayName": "Atari800",
@@ -258,6 +248,14 @@
             {
               "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
               "TargetPath": "retroarch/cores/atari800_libretro.so"
+            },
+            {
+              "SourceContent": [ "atari800_system = \"5200\"" ],
+              "TargetPath": "retroarch/config/Atari800/[game.Id].opt"
+            },
+            {
+              "SourceContent": [ "input_libretro_device_p1 = \"513\"" ],
+              "TargetPath": "retroarch/remaps/Atari800/[game.Id].rmp"
             }
           ]
         }
@@ -965,7 +963,7 @@
       ],
       "RetroArchCores": [
         {
-          "DisplayName": "VICE",
+          "DisplayName": "VICE x64",
           "CoreFileName": "vice_x64_libretro.so",
           "Files": [
             {
@@ -1100,6 +1098,24 @@
               "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vecx_libretro.so.zip",
               "SourcePath": "vecx_libretro.so",
               "TargetPath": "retroarch/cores/vecx_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 22,
+      "Alias": "quake",
+      "Name": "Quake 1",
+      "SupportedExtensions": [ ".pak" ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "TyrQuake",
+          "CoreFileName": "tyrquake_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/tyrquake_libretro.so",
+              "TargetPath": "retroarch/cores/tyrquake_libretro.so"
             }
           ]
         }
