Support for Quake

--- a/appsettings.json
+++ b/appsettings.json
@@ -671,6 +671,16 @@
               "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
             }
           ]
+        },
+        {
+          "DisplayName": "PicoDrive",
+          "CoreFileName": "picodrive_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/picodrive_libretro.so",
+              "TargetPath": "retroarch/cores/picodrive_libretro.so"
+            }
+          ]
         }
       ]
     },
