Added more systems
Added new systems:
ZX spectrum
Colecovision

Added more options for Amiga.

--- a/appsettings.json
+++ b/appsettings.json
@@ -52,6 +52,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/neogeo.zip",
+              "TargetPath": "retroarch/system/neogeo.zip"
             }
           ]
         },
@@ -62,6 +66,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/mame2003_plus_libretro.so",
               "TargetPath": "retroarch/cores/mame2003_plus_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/neogeo.zip",
+              "TargetPath": "retroarch/system/neogeo.zip"
             }
           ]
         }
@@ -88,7 +96,7 @@
           "FileName": "disksys.rom",
           "MD5": [ "ca30b50f880eb660a320674ed365ef7a" ],
           "SupportedExtensions": [ ".fds" ],
-          "Required": true
+          "Required": false
         }
       ],
       "InternalEmulator": {
@@ -111,6 +119,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/fceumm_libretro.so",
               "TargetPath": "retroarch/cores/fceumm_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/disksys.rom",
+              "TargetPath": "retroarch/system/disksys.rom"
             }
           ]
         },
@@ -122,6 +134,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/nestopia_libretro.so",
               "TargetPath": "retroarch/cores/nestopia_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/disksys.rom",
+              "TargetPath": "retroarch/system/disksys.rom"
             }
           ]
         },
@@ -237,7 +253,7 @@
         {
           "FileName": "5200.rom",
           "MD5": [ "281f20ea4320404ec820fb7ec0693b38" ],
-          "Required": true
+          "Required": false
         }
       ],
       "RetroArchCores": [
@@ -245,6 +261,10 @@
           "DisplayName": "Atari800",
           "CoreFileName": "atari800_libretro.so",
           "Files": [
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/5200.rom",
+              "TargetPath": "retroarch/system/5200.rom"
+            },
             {
               "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
               "TargetPath": "retroarch/cores/atari800_libretro.so"
@@ -354,15 +374,15 @@
       "BiosFiles": [
         {
           "FileName": "bios_CD_E.bin",
-          "Required": true
+          "Required": false
         },
         {
           "FileName": "bios_CD_J.bin",
-          "Required": true
+          "Required": false
         },
         {
           "FileName": "bios_CD_U.bin",
-          "Required": true
+          "Required": false
         }
       ],
       "RetroArchCores": [
@@ -373,6 +393,18 @@
             {
               "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
               "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_E.bin",
+              "TargetPath": "retroarch/system/bios_CD_E.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_J.bin",
+              "TargetPath": "retroarch/system/bios_CD_J.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_U.bin",
+              "TargetPath": "retroarch/system/bios_CD_U.bin"
             }
           ]
         }
@@ -566,6 +598,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/pcsx_rearmed_libretro.so",
               "TargetPath": "retroarch/cores/pcsx_rearmed_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/scph1001.bin",
+              "TargetPath": "retroarch/system/scph1001.bin"
             }
           ]
         }
@@ -633,6 +669,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/handy_libretro.so",
               "TargetPath": "retroarch/cores/handy_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/lynxboot.img",
+              "TargetPath": "retroarch/system/lynxboot.img"
             }
           ]
         }
@@ -663,16 +703,6 @@
       },
       "RetroArchCores": [
         {
-          "DisplayName": "Genesis Plus GX",
-          "CoreFileName": "genesis_plus_gx_libretro.so",
-          "Files": [
-            {
-              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
-              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
-            }
-          ]
-        },
-        {
           "DisplayName": "PicoDrive",
           "CoreFileName": "picodrive_libretro.so",
           "Files": [
@@ -684,6 +714,16 @@
         }
       ]
     },
+        {
+          "DisplayName": "Genesis Plus GX",
+          "CoreFileName": "genesis_plus_gx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
+              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
+        },
     {
       "Id": 11,
       "Alias": "intellivision",
@@ -699,12 +739,12 @@
         {
           "FileName": "exec.bin",
           "MD5": [ "62e761035cb657903761800f4437b8af" ],
-          "Required": true
+          "Required": false
         },
         {
           "FileName": "grom.bin",
           "MD5": [ "0cd5946c6473e42e8e4c2137785e427f" ],
-          "Required": true
+          "Required": false
         }
       ],
       "InternalEmulator": {
@@ -727,6 +767,14 @@
               "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
               "SourcePath": "FREEINTV.so",
               "TargetPath": "retroarch/cores/freeintv_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/exec.bin",
+              "TargetPath": "retroarch/system/exec.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/grom.bin",
+              "TargetPath": "retroarch/system/grom.bin"
             }
           ]
         }
@@ -804,6 +852,10 @@
             {
               "SourceUrl": "http://eversd.com/cores/mednafen_pce_fast_libretro.so",
               "TargetPath": "retroarch/cores/mednafen_pce_fast_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/syscard3.pce",
+              "TargetPath": "retroarch/system/syscard3.pce"
             }
           ]
         }
@@ -925,7 +977,7 @@
         {
           "FileName": "o2rom.bin",
           "MD5": [ "562d5ebf9e030a40d6fabfc2f33139fd" ],
-          "Required": true
+          "Required": false
         },
         {
           //only required for Videopac+
@@ -954,6 +1006,14 @@
               "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/o2em_libretro.so.zip",
               "SourcePath": "o2em_libretro.so",
               "TargetPath": "retroarch/cores/o2em_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/o2rom.bin",
+              "TargetPath": "retroarch/system/o2rom.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/g7400.bin",
+              "TargetPath": "retroarch/system/g7400.bin"
             }
           ]
         }
@@ -985,39 +1045,6 @@
       ]
     },
     {
-      "Id": 19,
-      "Alias": "amiga",
-      "Name": "Amiga",
-      "Group": "Commodore",
-      "SupportedExtensions": [ ".adf" ], //TODO: test if .adz also works
-      "TGDB_PlatformIds": [
-        {
-          "Id": 4911,
-          "Name": "Amiga"
-        }
-      ],
-      "BiosFiles": [
-        {
-          "FileName": "kick34005.A500",
-          "MD5": [ "82a21c1890cae844b3df741f2762d48d" ],
-          "Required": false
-        }
-      ],
-      "RetroArchCores": [
-        {
-          "DisplayName": "PUAE",
-          "CoreFileName": "puae_libretro.so",
-          "Files": [
-            {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
-              "SourcePath": "puae_libretro.so",
-              "TargetPath": "retroarch/cores/puae_libretro.so"
-            }
-          ]
-        }
-      ]
-    },
-    {
       "Id": 191,
       "Alias": "amiga-cd32",
       "Name": "Amiga CD32",
@@ -1033,12 +1060,12 @@
         {
           "FileName": "kick40060.CD32",
           "MD5": [ "5f8924d013dd57a89cf349f4cdedc6b1" ],
-          "Required": true
+          "Required": false
         },
         {
           "FileName": "kick40060.CD32.ext",
           "MD5": [ "bb72565701b1b6faece07d68ea5da639" ],
-          "Required": true
+          "Required": false
         }
       ],
       "RetroArchCores": [
@@ -1050,6 +1077,14 @@
               "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
               "SourcePath": "puae_libretro.so",
               "TargetPath": "retroarch/cores/puae_libretro.so"
+            },
+            {
+              "SourceUrl": "https://archive.org/download/retroarchbiospack1.0312020/Retroarch%20BIOS%20Pack%20%2806-28-2022%29.zip/system%2Fkick40060.CD32",
+              "TargetPath": "retroarch/system/kick40060.CD32"
+            },
+            {
+              "SourceUrl": "https://archive.org/download/retroarchbiospack1.0312020/Retroarch%20BIOS%20Pack%20%2806-28-2022%29.zip/system%2Fkick40060.CD32.ext",
+              "TargetPath": "retroarch/system/kick40060.CD32.ext"
             }
           ]
         }
@@ -1130,7 +1165,124 @@
           ]
         }
       ]
-    }
+    },
+  	{
+      "Id": 91,
+      "Alias": "spectrum",
+      "Name": "Spectrum",
+      "SupportedExtensions": [ ".tzx", ".tap", ".z80", ".rzx", ".scl", ".trd" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4913,
+          "Name": "ZX Spectrum"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Fuse",
+          "CoreFileName": "fuse_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/fuse_libretro.so.zip",
+              "SourcePath": "fuse_libretro.so",
+			  "TargetPath": "retroarch/cores/fuse_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+	{
+      "Id": 99,
+      "Alias": "colecovision",
+      "Name": "Colecovision",
+      "SupportedExtensions": [ ".col", ".cv" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 31,
+          "Name": "Colecovision"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "colecovision.rom",
+          "MD5": [ "2c66f5911e5b42b8ebe113403548eee7" ],
+          "Required": false
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "BlueMSX Colecovision",
+          "CoreFileName": "bluemsx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/bluemsx_libretro.so.zip",
+              "SourcePath": "bluemsx_libretro.so",
+			  "TargetPath": "retroarch/cores/bluemsx_libretro.so"
+            },
+			{
+              "SourceUrl": "http://bluemsx.msxblue.com/rel_download/blueMSXv282full.zip",
+			  "SourcePath": "Machines/COL - ColecoVision/coleco.rom",
+			  "TargetPath": "retroarch/system/Machines/COL - ColecoVision/coleco.rom"
+		    },
+			{
+              "SourceUrl": "http://bluemsx.msxblue.com/rel_download/blueMSXv282full.zip",
+			  "SourcePath": "Machines/COL - ColecoVision/config.ini",
+			  "TargetPath": "retroarch/system/Machines/COL - ColecoVision/config.ini"
+		    },
+		    {
+			  "SourceUrl": "http://bluemsx.msxblue.com/rel_download/blueMSXv282full.zip",
+			  "SourcePath": "Databases/colecodb.xml",
+			  "TargetPath": "retroarch/system/Databases/colecodb.xml"
+		    },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/colecovision.rom",
+              "TargetPath": "retroarch/system/colecovision.rom"
+            }
+          ]
+        }
+      ]
+    },
+{
+  "Id": 92,
+  "Alias": "amiga",
+  "Name": "Amiga",
+  "SupportedExtensions": [ ".adf", ".adz", ".dms", ".fdi", ".ipf", ".hdf", ".hdz" ],
+  "TGDB_PlatformIds": [
+	{
+	  "Id": 4911,
+	  "Name": "Amiga"
+	}
+  ],
+  "RetroArchCores": [
+	{
+	  "DisplayName": "PUAE",
+	  "CoreFileName": "puae_libretro.so",
+	  "Files": [
+		{
+		  "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
+		  "SourcePath": "puae_libretro.so",
+		  "TargetPath": "retroarch/cores/puae_libretro.so"
+		},
+		{
+		  "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/kick34005.A500",
+		  "TargetPath": "retroarch/system/kick34005.A500"
+		},		{
+		  "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/kick40063.A600",
+		  "TargetPath": "retroarch/system/kick40063.A600"
+		},
+		{
+		  "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/kick40068.A1200",
+		  "TargetPath": "retroarch/system/kick40068.A1200"
+		}
+	  ]
+	}
+  ]
+}
+
+
+// MORE PLATFORMS GO HERE
+
+
   ],
   "PlatformRemappings": [
     {
