Added more systems
Added new systems:
ZX spectrum
Colecovision

Added more options for Amiga.

--- a/appsettings.json
+++ b/appsettings.json
@@ -864,7 +864,7 @@
     {
       "Id": 14,
       "Alias": "wonderswan",
-      "Name": "WonderSwan / Color",
+      "Name": "WonderSwan (Color)",
       "SupportedExtensions": [ ".ws", ".wsc" ],
       "TGDB_PlatformIds": [
         {
@@ -903,7 +903,7 @@
     {
       "Id": 15,
       "Alias": "neogeo",
-      "Name": "Neo Geo Pocket / Color",
+      "Name": "Neo Geo Pocket (Color)",
       "SupportedExtensions": [ ".ngp", ".ngc" ],
       "TGDB_PlatformIds": [
         {
@@ -1169,7 +1169,7 @@
   	{
       "Id": 91,
       "Alias": "spectrum",
-      "Name": "Spectrum",
+      "Name": "ZX Spectrum",
       "SupportedExtensions": [ ".tzx", ".tap", ".z80", ".rzx", ".scl", ".trd" ],
       "TGDB_PlatformIds": [
         {
