--- a/EverLoader.csproj
+++ b/EverLoader.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>images\icon-white.ico</ApplicationIcon>
     <Version>2.1.6</Version>
