--- a/appsettings.json
+++ b/appsettings.json
@@ -1239,7 +1239,7 @@
       "Alias": "Dreamcast",
       "Name": "Dreamcast",
       "Group": "Sega",
-      "SupportedExtensions": [ ".chd", ".cdi", ".gdi" ],
+      "SupportedExtensions": [ ".chd", ".cdi" ],
       "TGDB_PlatformIds": [
         {
           "Id": 16,
@@ -1278,6 +1278,82 @@
             {
               "SourceUrl": "https://eversd.com/cores/fuse_libretro.so",
               "TargetPath": "retroarch/cores/fuse_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 97,
+      "Alias": "supergrafx",
+      "Name": "NEC Supergrafx",
+      "SupportedExtensions": [ ".sgx" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 34,
+          "Name": "TurboGrafx 16"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Mednafen SuperGrafx",
+          "CoreFileName": "mednafen_supergrafx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/mednafen_supergrafx_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_supergrafx_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/syscard3.pce",
+              "TargetPath": "retroarch/system/syscard3.pce"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 96,
+      "Alias": "pokemini",
+      "Name": "Pokemon Mini",
+      "SupportedExtensions": [ ".min" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4957,
+          "Name": "Nintendo Pokemon Mini"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PokeMini",
+          "CoreFileName": "pokemini_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/pokemini_libretro.so",
+              "TargetPath": "retroarch/cores/pokemini_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 95,
+      "Alias": "tic80",
+      "Name": "TIC-80",
+      "SupportedExtensions": [ ".tic" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 0,
+          "Name": "TIC-80"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "tic80",
+          "CoreFileName": "tic80_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/tic80_libretro.so",
+              "TargetPath": "retroarch/cores/tic80_libretro.so"
             }
           ]
         }
