Added new cores
Added new cores:
Atari 400/800/800XL
Pokemon Mini
SuperGrafx
TIC-80

Removed .gdi as extension from Dreamcast as it was unsupported.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1360,6 +1360,55 @@
       ]
     },
     {
+      "Id": 94,
+      "Alias": "atari800",
+      "Name": "400/800/800XL",
+      "Group": "Atari",
+      "SupportedExtensions": [ ".xfd", ".atr", ".atx", ".cdm", ".cas", ".xex", ".bas", ".rom" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4943,
+          "Name": "Atari 800"
+        },
+        {
+          "Id": 30,
+          "Name": "Atari XE"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Atari800",
+          "CoreFileName": "atari800_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/ATARIBAS.ROM",
+              "TargetPath": "retroarch/system/ATARIBAS.ROM"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/ATARIOSA.ROM",
+              "TargetPath": "retroarch/system/ATARIOSA.ROM"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/ATARIOSB.ROM",
+              "TargetPath": "retroarch/system/ATARIOSB.ROM"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/ATARIXL.ROM",
+              "TargetPath": "retroarch/system/ATARIXL.ROM"
+            },
+            {
+              "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
+              "TargetPath": "retroarch/cores/atari800_libretro.so"
+            },
+            {
+              "SourceContent": [ "input_libretro_device_p1 = \"513\"" ],
+              "TargetPath": "retroarch/remaps/Atari800/[game.Id].rmp"
+            }
+          ]
+        }
+      ]
+    },
+    {
       "Id": 99,
       "Alias": "colecovision",
       "Name": "Colecovision",
