Added more cores
Added more cores:
- Mega Duck
- Nintendo Game & Watch
- Nintendo Virtual Boy

--- a/appsettings.json
+++ b/appsettings.json
@@ -1747,10 +1747,89 @@
           ]
         }
       ]
+    },
+    {
+      "Id": 93,
+      "Alias": "Game & Watch",
+      "Name": "Game & Watch",
+      "Group": "Nintendo",
+      "SupportedExtensions": [ ".mgw" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4950,
+          "Name": "Game & Watch"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "gw",
+          "CoreFileName": "gw_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/gw_libretro.so",
+              "TargetPath": "retroarch/cores/gw_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 90,
+      "Alias": "Mega Duck",
+      "Name": "Mega Duck",
+      "SupportedExtensions": [ ".bin" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4948,
+          "Name": "Mega Duck"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "sameduck",
+          "CoreFileName": "sameduck_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/sameduck_libretro.so",
+              "TargetPath": "retroarch/cores/sameduck_libretro.so"
+            },
+            {
+              "SourceUrl": "https://eversd.com/cores/info.zip",
+              "SourcePath": "sameduck_libretro.info",
+              "TargetPath": "retroarch/info/sameduck_libretro.info"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 80,
+      "Alias": "vb",
+      "Name": "Virtual Boy",
+      "Group": "Nintendo",
+      "SupportedExtensions": [ ".vb", ".vboy" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4918,
+          "Name": "Virtual Boy"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Beetle VB",
+          "CoreFileName": "mednafen_vb_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/mednafen_vb_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_vb_libretro.so"
+            },
+          ]
+        }
+      ]
     }
 
 
-    // MORE PLATFORMS GO HERE
+    // MORE PLATFORMS GO HERE - IDs 82-89 ARE AVAILABLE
 
 
   ],
