implemented caching for RetroArch download;

--- a/EverLoader.csproj
+++ b/EverLoader.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="Crc32.NET" Version="1.2.0" />
+    <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="nQuant" Version="1.0.3" />
     <PackageReference Include="TheGamesDBApiWrapper" Version="1.1.1" />
   </ItemGroup>
@@ -73,5 +74,9 @@
 		<SubType>Form</SubType>
 	</Compile>
   </ItemGroup>
+
+
+
+
 
 </Project>
