New Systems and Filetypes added
Commodore 16 - ".prg", ".tap" and ".m3u"
Commodore 64 - ".crt", ".tap" and ".m3u"
Commodore Amiga - ".m3u"
Commodore PLUS/4 - ".prg", ".tap" and ".m3u"
DOSBox-Pure - ".dosz"
Nintendo 64 - ".z64" and ".n64"
Sega CD/Mega CD - ".chd", ".bin / .cue" and ".m3u"
Sharp X68000 - ".dim", ".hdm", ".hdf", ".2hd", ".img", ".d88", ".88d", ".dup", ".xdf" and ".m3u" (for multi-disk support)

--- a/appsettings.json
+++ b/appsettings.json
@@ -426,6 +426,28 @@
       ],
       "RetroArchCores": [
         {
+          "DisplayName": "PicoDrive",
+          "CoreFileName": "picodrive_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/picodrive_libretro.so",
+              "TargetPath": "retroarch/cores/picodrive_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_E.bin",
+              "TargetPath": "retroarch/system/bios_CD_E.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_J.bin",
+              "TargetPath": "retroarch/system/bios_CD_J.bin"
+            },
+            {
+              "SourceUrl": "https://github.com/archtaurus/RetroPieBIOS/raw/master/BIOS/bios_CD_U.bin",
+              "TargetPath": "retroarch/system/bios_CD_U.bin"
+            }
+          ]
+        },
+		{
           "DisplayName": "Genesis Plus GX Wide",
           "CoreFileName": "genesis_plus_gx_wide_libretro.so",
           "Files": [
@@ -1093,7 +1115,7 @@
       "Alias": "c64",
       "Name": "C64",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".prg", ".d64" ],
+      "SupportedExtensions": [ ".prg", ".d64", ".crt", ".tap", ".m3u" ],
       "TGDB_PlatformIds": [
         {
           "Id": 40,
@@ -1147,11 +1169,11 @@
               "TargetPath": "retroarch/cores/puae_libretro.so"
             },
             {
-              "SourceUrl": "https://archive.org/download/retroarchbiospack1.0312020/Retroarch%20BIOS%20Pack%20%2806-28-2022%29.zip/system%2Fkick40060.CD32",
+              "SourceUrl": "https://archive.org/download/verifiedbiosfiles/OGA%20BIOS/Amiga/kick40060.CD32",
               "TargetPath": "retroarch/system/kick40060.CD32"
             },
             {
-              "SourceUrl": "https://archive.org/download/retroarchbiospack1.0312020/Retroarch%20BIOS%20Pack%20%2806-28-2022%29.zip/system%2Fkick40060.CD32.ext",
+              "SourceUrl": "https://archive.org/download/verifiedbiosfiles/OGA%20BIOS/Amiga/kick40060.CD32.ext",
               "TargetPath": "retroarch/system/kick40060.CD32.ext"
             }
           ]
@@ -1716,7 +1738,7 @@
       "Alias": "amiga",
       "Name": "Amiga",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".adf", ".adz", ".dms", ".fdi", ".ipf", ".hdf", ".hdz" ],
+      "SupportedExtensions": [ ".adf", ".adz", ".dms", ".fdi", ".ipf", ".hdf", ".hdz", ".m3u" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4911,
@@ -1826,10 +1848,170 @@
           ]
         }
       ]
+    },
+    {
+      "Id": 82,
+      "Alias": "n64",
+      "Name": "Nintendo 64",
+      "Group": "Nintendo",
+      "SupportedExtensions": [ ".z64", ".n64", ".v64" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 3,
+          "Name": "Nintendo 64"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Parallel n64",
+          "CoreFileName": "parallel_n64_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/parallel_n64_libretro.so",
+              "TargetPath": "retroarch/cores/parallel_n64_libretro.so"
+            },
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 83,
+      "Alias": "DOS",
+      "Name": "PC DOS",
+      "SupportedExtensions": [ ".dosz" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 1,
+          "Name": "PC"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "DOSBox-Pure",
+          "CoreFileName": "dosbox_pure_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/dosbox_pure_libretro.so",
+              "TargetPath": "retroarch/cores/dosbox_pure_libretro.so"
+            },
+          ]
+        }
+      ]
+    },
+	    {
+      "Id": 84,
+      "Alias": "X68000",
+      "Name": "Sharp X68000",
+      "SupportedExtensions": [ ".dim", ".hdm", ".hdf", ".2hd", ".m3u", ".img", ".d88", ".88d", ".dup", ".xdf"  ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4931,
+          "Name": "Sharp X68000"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PX68k",
+          "CoreFileName": "px68k_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/cores/px68k_libretro.so",
+              "TargetPath": "retroarch/cores/px68k_libretro.so"
+            },
+			{
+              "SourceUrl": "https://eversd.com/cores/info.zip",
+              "SourcePath": "px68k_libretro.info",
+              "TargetPath": "retroarch/info/px68k_libretro.info"
+            },
+			{
+              "SourceUrl": "https://github.com/libretro/libretro-database/raw/master/rdb/Sharp%20-%20X68000.rdb",
+              "TargetPath": "retroarch/database/rdb/Sharp - X68000.rdb"
+            },
+			{
+              "SourceUrl": "https://github.com/Abdess/retroarch_system/raw/libretro/Sharp%20-%20X68000/cgrom.dat",
+              "TargetPath": "retroarch/system/keropi/cgrom.dat"
+            },
+            {
+              "SourceUrl": "https://github.com/Abdess/retroarch_system/raw/libretro/Sharp%20-%20X68000/iplrom.dat",
+              "TargetPath": "retroarch/system/keropi/iplrom.dat"
+            },
+            {
+              "SourceUrl": "https://github.com/Abdess/retroarch_system/raw/libretro/Sharp%20-%20X68000/iplrom30.dat",
+              "TargetPath": "retroarch/system/keropi/iplrom30.dat"
+            },
+			{
+              "SourceUrl": "https://github.com/Abdess/retroarch_system/raw/libretro/Sharp%20-%20X68000/iplromco.dat",
+              "TargetPath": "retroarch/system/keropi/iplromco.dat"
+            },
+            {
+              "SourceUrl": "https://github.com/Abdess/retroarch_system/raw/libretro/Sharp%20-%20X68000/iplromxv.dat",
+              "TargetPath": "retroarch/system/keropi/iplromxv.dat"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 85,
+      "Alias": "plus4",
+      "Name": "PLUS/4",
+      "Group": "Commodore",
+      "SupportedExtensions": [ ".prg", ".tap", ".m3u" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 5007,
+          "Name": "Commodore PLUS/4"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "VICE xplus4",
+          "CoreFileName": "vice_xplus4_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/vice_xplus4_libretro.so",
+              "TargetPath": "retroarch/cores/vice_xplus4_libretro.so"
+            },
+            {
+              "SourceContent": [ "vice_plus4_model = \"PLUS4 NTSC\"" ],
+              "TargetPath": "retroarch/config/VICE xplus4/[game.Id].opt"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 86,
+      "Alias": "c16",
+      "Name": "C16",
+      "Group": "Commodore",
+      "SupportedExtensions": [ ".prg", ".tap", ".m3u" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 5006,
+          "Name": "Commodore 16"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "VICE xplus4",
+          "CoreFileName": "vice_xplus4_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/vice_xplus4_libretro.so",
+              "TargetPath": "retroarch/cores/vice_xplus4_libretro.so"
+            },
+            {
+              "SourceContent": [ "vice_plus4_model = \"C16 NTSC\"" ],
+              "TargetPath": "retroarch/config/VICE xplus4/[game.Id].opt"
+            }
+          ]
+        }
+      ]
     }
 
 
-    // MORE PLATFORMS GO HERE - IDs 82-89 ARE AVAILABLE
+    // MORE PLATFORMS GO HERE - IDs 87-89 ARE AVAILABLE
 
 
   ],
